actual default header images.  prevent iso roll app header overflow (by hiding some roll choices)

--- a/app/assets/stylesheets/partials/_isolated-roll.scss
+++ b/app/assets/stylesheets/partials/_isolated-roll.scss
@@ -17,6 +17,8 @@ body.isolated-roll {
 //-------------------------
 
 .iso-roll-app-header {
+  max-height: 36px;
+  overflow: hidden;
 }
 
 .current-roll {
